# nlink

./: .gitignore  AGENT.html  AGENT.md  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.emergency  README.md  ascii_constitutional_recovery.sh  constitutional_header_systhesis.sh  etps_telemetry.c  genetics_discussion_summary.md  immediate_fix_protocol.sh  immediate_recovery_protocol.sh  nexus_core.h  nlink-backup.txt  nlink-dir.txt  nlink-modules.c  nlink-orchstion.txt  nlink-poc.txt  nlink.schema.xml  nlink.txt.dir  nlink_constitutional_restoration.sh  nlink_module_old.c  quick-start.sh  recovery_status_20250724_234535.txt  resolve.sh  setup_poc_files.sh  strucuture.md
nlink-unstable/: CMakeLists.txt  README.md
nlink-unstable-v1/examples/: CMakeLists.txt
nlink-unstable-v1/examples/basic_usage/: Makefile  main.c
nlink-unstable-v1/src/core/: CMakeLists.txt
nlink-unstable-v1/src/core/cold/: nexus_core.c
nlink-unstable-v1/src/core/common/: CMakeLists.txt  result.c
nlink-unstable-v1/src/core/minimizer/: okpala_ast.c  okpala_automaton.c
nlink-unstable-v1/src/core/schema/: nlink_schema.json
nlink-unstable-v1/src/core/symbols/: nexus_symbols.c
nlink-unstable-v3/: .gitignore  CMakeCache.txt  CMakeListings.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  NexusLinkConfig.cmake  NexusLinkConfig.cmake.in  integration_protocol.sh  nlink-dir.txt  nlink_build_recovvery.sh  nlink_clean_merge.sh  nlink_reposittory_sanitizer.sh  obinexus_component_generator.py  standardize_components.sh
nlink-unstable-v3/cmake/: BuildOuputStandard.cmake  BuildSystem.cmake  CMakeLists.txt  CollectArtifacts.cmake  ComponentSystem.cmake  ComponentSystem.cmake.20250729181112.bak  ComponentSystem.cmake.bak  ExecutableConfig.cmake  Hooks.cmake  NexusLinkBuildResolution.cmake  NexusLinkConfig.cmake.in  PackageConfig.cmake  TargetGuards.cmake  ValidateOutput.cmake  healing-a-generation-left-behind.sh
nlink-unstable-v3/include/: nlink.h
nlink-unstable-v3/include/nlink/core/: nlink_version.h
nlink-unstable-v3/scripts/adhoc/: component_structure_normalizer.py  fix_component_system.sh  generate_compent_build_files.py  nlink_build_system_repair.sh  nlink_component_standardization.sh  nlink_final_remediation.sh  path_resolution_protocol.sh  restorifimes.sh
nlink-unstable-v3/src/: CMakeLists.txt  component-manifest.yaml
nlink-unstable-v3/src/cli/: CMakeLists.txt
nlink-unstable-v3/src/core/: CMakeLists.txt
nlink-unstable-v3/src/core/CMakeFiles_build/: CMakeLists.txt
nlink-unstable-v3/src/core/CMakeFiles_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/CMakeFiles_build_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/common/: CMakeLists.txt  common.c  common.h
nlink-unstable-v3/src/core/common_build/: CMakeLists.txt
nlink-unstable-v3/src/core/common_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/common_build_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/config/: CMakeLists.txt  config.c  config.h
nlink-unstable-v3/src/core/config_build/: CMakeLists.txt
nlink-unstable-v3/src/core/config_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/config_build_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/metadata/: CMakeLists.txt  metadata.h
nlink-unstable-v3/src/core/metadata_build/: CMakeLists.txt
nlink-unstable-v3/src/core/metadata_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/metadata_build_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/minimizer/: CMakeLists.txt  minimizer.h
nlink-unstable-v3/src/core/minimizer_build/: CMakeLists.txt
nlink-unstable-v3/src/core/minimizer_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/minimizer_build_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/mpsystem/: CMakeLists.txt  mpsystem.c  mpsystem.h
nlink-unstable-v3/src/core/mpsystem_build/: CMakeLists.txt
nlink-unstable-v3/src/core/mpsystem_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/mpsystem_build_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/parser/: CMakeLists.txt
nlink-unstable-v3/src/core/parser_build/: CMakeLists.txt
nlink-unstable-v3/src/core/parser_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/parser_build_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/pattern/: CMakeLists.txt  pattern.c  pattern.h
nlink-unstable-v3/src/core/pattern_build/: CMakeLists.txt
nlink-unstable-v3/src/core/pattern_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/pattern_build_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/pattern_matching/: CMakeLists.txt  pattern_matching.c  pattern_matching.h
nlink-unstable-v3/src/core/pattern_matching_build/: CMakeLists.txt
nlink-unstable-v3/src/core/pattern_matching_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/pattern_matching_build_build_build/: CMakeLists.txt
nlink-unstable-v3/src/core/pipeline/: CMakeLists.txt  pipeline.c  pipeline.h
nlink-unstable-v3/src/core/pipeline_build/: CMakeLists.txt
nlink-unstable-v3/src/core/schema/: CMakeLists.txt  (+2 more)
nlink-unstable-v3/templates/: nlink.h.in
nlink-unstable-v3/tests/: CMakeLists.txt
nlink-unstable-v3/tests/unit/: CMakeLists.txt
nlink-unstable/docs/design/: hieracy.tsx
nlink-unstable/docs/uml/: resolution.flow
nlink-unstable/examples/basic_usage/: nexus_basic_example
nlink-unstable/examples/simple_schema/: example_schema.json
nlink-unstable/old/: migrate.sh
nlink-unstable/old/unit/: CMakeLists.txt  test_semver.c  test_symbols.c
nlink-unstable/src/: CMakeLists.txt
nlink-unstable/src/cli/: main.c  nlink_cli.c
nlink-unstable/src/spsystem/: sps_config.c  sps_dependency.c  sps_lifecycle.c  sps_stream.c
nlink-unstable/tests/: CMakeLists.txt  restructuret_test.sh  run_tests.sh  verify_tests.sh
nlink-unstable/tests/common/: test_common.c  test_common.h  test_semver.c  test_symbol.c
nlink-unstable/tests/integration/: CMakeLists.txt  test_component_lifecycle.c  test_versioned_integration.c
nlink-unstable/tests/unit/: CMakeLists.txt
test/: CMakeLists.txt  zkwxp_integration_test.c
(+595 files in other folders)
